--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 body{
     width: 100%;
-    background-color: antiquewhite;
+    background-color: white;
 }
 header{
     position: sticky;
@@ -19,6 +19,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     padding: 1rem 2.5rem;
+    background-color: white;
     /* border: 1px solid black; */
 
 }
@@ -66,4 +67,127 @@ nav{
     color: white;
     border-radius: 5px;
     font-weight: bold;
+}
+/*  nav bar scecond section---------------- */
+
+.nav-secondpart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(20, 20, 81);
+    font-size: 18px;
+    color: white;
+    gap: 20px;
+}
+.nav-secondpart img{
+    height: 30px;
+}
+.nav-secondpart p{
+    font-weight: bold;
+    margin: 10px 0;
+}
+.nav-secondpart a {
+    color: white;
+}
+/* ------------------main -------------------- */
+main{
+    width: 100%;
+    background-color: white;
+}
+
+.firstsection{
+    display: flex;
+    background-image: url(./items/php-marqee-ai-data-crm-lg-bg.webp);
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 100px 50px;
+    background-size: cover;
+    background-position: 70% 0;
+    background-repeat: no-repeat;
+}
+.firstdiv{
+    width: 50%;
+}
+
+.mainheading{
+    font-size: 56px;
+    color: #032d60;
+    font-weight: bold;
+    line-height: 64px;
+}
+.submainheading{
+    font-size: 20px;
+    color: black;
+    margin-top: 20px;
+    margin-bottom: 25px;
+}
+.firstdivButton{
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+}
+.startbutton{
+    padding: 15px 25px;
+    background-color:blue;
+    color: white;
+}
+.watchbutton{
+    background-color: white;
+    padding: 15px 25px;
+    color: blue;
+    border: 1px solid blue;
+}
+.videopart{
+    width: 50%;
+    height: auto;
+    border: 1px solid black;
+}
+
+
+.secondsection{
+    width: 100%;
+    height: 100vh;
+    background-image: url(items/2pb-hp-products-bg.webp);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    
+   
+}
+.secondsection h1{
+    text-align: center;
+    font-size: 40px;
+    letter-spacing: -.008em;
+    line-height: 48px;
+    margin-top: 20px;
+
+}
+.divofdiv{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    margin-top: 50px;
+}
+.div1st{
+    width: 20%;
+    border-radius: 10px;
+    object-fit: cover;
+}
+.div1st img{
+    width: 100%;
+
+}
+.div1st h2{
+    margin: 20px 30px
+}
+.div1st p{
+    margin: 20px 30px
+}
+.div1st a{
+    margin-top: 600px;
+    margin-bottom: 20px;
+}
+.viewall{
+    margin: 100px 100px;
 }
